hphp/hack/test/typecheck/typedef/new_using_shape_typedef.php
<?hh

type S = shape(
  'a' => int,
);

function f(): void {
  $f = new S(42);
}
